fix spacing more

--- a/assets/style.css
+++ b/assets/style.css
@@ -608,7 +608,7 @@ hr {
   border: none;
   height: 1px;
   background: var(--border);
-  margin: 1.5rem auto 1rem;
+  margin: 0.5rem auto;
 }
 
 mark {
@@ -765,7 +765,8 @@ progress:indeterminate::-moz-progress-bar {
     margin-top: 5px;
   }
 
-  .xp {
+  .xp,
+  .skills {
     margin: 0;
   }
 
